feat : filter events
